packages/test-dev-server/tests/fixtures/invalidation/dev.config.mjs
import { defineDevConfig } from '@rolldown/test-dev-server';

export default defineDevConfig({
  platform: 'node',
  build: {
    input: 'src/main.js',
    experimental: {
      devMode: {},
    },
    platform: 'node',
    treeshake: false,
  },
});
